# ais1003-prosjekt

./: #main.cpp#  .clang-format  .gitignore  CMakeLists.txt  FEEDBACK.md  README.md  build.sh  bundle.sh  install.sh  main.cpp
.cache/clangd/index/: Board.cpp.D70C0483BBB7D7A9.idx  Board.hpp.82457F4B3E45C777.idx  BoardController.cpp.F0711492378F28B2.idx  BoardController.hpp.4145283CBF0FD087.idx  BoardView.cpp.25950264BF5DC6F4.idx  BoardView.hpp.BE29CF2141238D3F.idx  Tetromino.cpp.2FF0F5645689A60C.idx  Tetromino.hpp.EBAE483C273C8B3A.idx  TetrominoPieces.hpp.DF16B9CAE3637D10.idx  Utility.hpp.F8224803A5D4AE8C.idx  main.cpp.A4EDDF6E7870DB22.idx  tests.cpp.3F10D36928F1F600.idx
app/src/main/jni/: CMakeLists.txt  android-specifics.hpp  main.cpp
app/src/main/jni/include/Board/: Board.hpp  BoardController.hpp  BoardView.hpp  BoardView.hpp~
app/src/main/jni/source/: CMakeLists.txt
app/src/main/jni/source/Board/: Board.cpp  BoardController.cpp  BoardView.cpp  BoardView.cpp~  CMakeLists.txt
app/src/main/res/values/: strings.xml
include/: Board.hpp  GameBoard.hpp  Tetromino.hpp  Utility.hpp
include/Board/: Board.hpp  BoardController.hpp  BoardView.hpp  GameBoard.hpp
include/Tetromino/: Tetromino.hpp  TetrominoPieces.hpp
source/: Board.cpp  CMakeLists.txt  GameBoard.cpp
source/Board/: Board.cpp  BoardController.cpp  BoardView.cpp  CMakeLists.txt  GameBoard.cpp
source/Tetromino/: CMakeLists.txt  Tetromino.cpp
tests/: CMakeLists.txt  tests.cpp
